--- a/resources/css/client/pages/home/styles.css
+++ b/resources/css/client/pages/home/styles.css
@@ -116,6 +116,8 @@
 }
 
 /* End Alur Section */
+
+/* Proses Section */
 #proses {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -153,22 +155,49 @@
 }
 
 #promo .card {
-    background-color: rgba(255, 255, 255, 0.1);
     border: none;
     border-radius: var(--border-radius);
     transition: var(--transition);
-
 }
+
+#promo .card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+}
+#promo .card img {
+    width: 100%;
+    height: auto;
+}
+
+#promo .card-body .btn-primary {
+    background-color: var(--accent);
+    font-family: var(--font-2);
+    color: var(--white);
+    transition: var(--transition);
+    font-size: 16px;
+    padding: 12px 24px;
+}
+
+#promo .card-body .d-grid {
+     margin-top: 1.5rem;
+}
+/* End Promo Section */
 
 /* Testimoni */
 #testimoni {
-    padding-top: 80px;
+    padding-top: 40px;
     padding-bottom: 80px;
+    background-color: var(--accent);
+}
+
+#testimoni .card img {
+    width: 100%;
+    height: auto;
 }
 
 .glide-testimoni .card {
-    border-radius: 12px;
-    border: 1px solid #eee;
+    border-radius: 15px;
+    border: 1px solid var(--neutral);
 }
 
 .glide-testimoni .card-footer {
@@ -195,20 +224,33 @@
 #kontak {
     padding-top: 80px;
     padding-bottom: 80px;
+    background-color: var(--neutral);
 }
 
 #kontak iframe {
     width: 100%;
-    height: 350px;
+    height: 270px;
     border-radius: var(--border-radius);
 }
+
 /* End Kontak Section */
 
 
 /* CTA Penutup */
 #cta-penutup {
-    padding: 60px 0;
-    background-color: var(--primary);
-    color: var(--white);
+    padding: 40px 10px;
+    background-color: var(--accent);
+    color: var(--neutral);
+}
+
+#cta-penutup .btn-primary {
+    background-color: var(--neutral);
+    color: var(--accent);
+    font-family: var(--font-2);
+    transition: var(--transition);
+    font-size: 36px;
+    padding: 16px 32px;
+    border-radius: var(--border-radius);
+    font-weight: 700;
 }
 /* End CTA Penutup */
