--- a/resources/css/client/styles.css
+++ b/resources/css/client/styles.css
@@ -42,7 +42,7 @@ html, body {
     transition: var(--transition);
     font-size: 18px;
     border-color: var(--accent);
-    padding: 8px 124px;
+    padding: 8px 16px;
 }
 
 .btn-primary:hover {
@@ -54,12 +54,13 @@ html, body {
 .btn-secondary {
     background-color: var(--success);
     font-family: var(--font-2);
-    font-weight: 400;
+    font-weight: 300;
     color: var(--white);
     transition: var(--transition);
     font-size: 18px;
     border-color: var(--success);
-    padding: 8px 16px;
+    padding: 12px 24px;
+    border-radius: 50px;
 }
 
 .btn-secondary:hover {
@@ -96,7 +97,7 @@ html, body {
     font-size: 18px;
     font-weight: 400;
     line-height: 28px;
-    color: var(--accent);
+    color: var(--navy);
     font-family: var(--font-2);
 }
 
