--- a/resources/css/client/pages/home/styles.css
+++ b/resources/css/client/pages/home/styles.css
@@ -35,7 +35,7 @@
 /* Keunggulan Section */
 #keunggulan {
     padding-top: 80px;
-    padding-bottom: 80px;
+    padding-bottom: 40px;
     background-color: var(--neutral);
 }
 
@@ -75,8 +75,11 @@
 
 #layanan .card {
     box-shadow: none; 
-    border-radius: var(--border-radius);
+    border-radius: 20px;
     transition: var(--transition);
+    width: 100%;
+    max-width: 310px;
+    margin: 0 auto;
 }
 
 #layanan .card:hover {
@@ -93,15 +96,21 @@
     position: relative;
 }
 
+.glide__slides {
+    display: flex;
+    justify-content: center;
+}
+
+
 /* Styling Arrows */
 .glide-layanan .glide__arrow {
     position: absolute;
-    top: 50%;
+    top: 40%;
     transform: translateY(-50%);
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: white;
+    background-color: var(--neutral);
     border: 1px solid #474444;
     color: var(--navy);
     cursor: pointer;
@@ -109,15 +118,15 @@
 }
 
 .glide-layanan .glide__arrow:hover {
-    background-color: var(--neutral);
+    background-color: var(--grey);
 }
 
 .glide-layanan .glide__arrow--left {
-    left: -50px;
+    left: -25px;
 }
 
 .glide-layanan .glide__arrow--right {
-    right: -50px;
+    right: -25px;
 }
 
 /* Styling Bullets */
@@ -130,7 +139,7 @@
     background-color: #D1D5DB;
     width: 10px;
     height: 10px;
-    border-radius: 50%;
+    border-radius: 100%;
     border: none;
     margin: 0 5px;
     cursor: pointer;
@@ -198,7 +207,8 @@
 
 /* Promo Section */
 #promo {
-    padding: 40px 0;
+    padding-top: 40px;
+    padding-bottom: 80px;
     background-color: var(--neutral);
 }
 
@@ -233,12 +243,20 @@
 
 /* Testimoni */
 #testimoni {
-    padding-top: 40px;
+    padding-top: 80px;
     padding-bottom: 80px;
-    background-color: var(--accent);
 }
 
-#testimoni .card img {
+#testimoni .card{
+    border-radius: 15px;
+    transition: var(--transition);
+    width: 100%;
+    max-width: 340px;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.glide-testimoni {
     position: relative;
 }
 
@@ -250,6 +268,53 @@
 .glide-testimoni .card-footer {
     background-color: transparent;
     border-top: none;
+    justify-content: center;
+    text-align: center;
+}
+.glide-testimoni .glide__arrow {
+    position: absolute;
+    top: 40%;
+    transform: translateY(-40%);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1px solid #FBFCFD;
+    color: var(--neutral);
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.glide-testimoni .glide__arrow:hover {
+    background-color: var(--accent);
+}
+
+.glide-testimoni .glide__arrow--left {
+    left: -25px;
+}
+
+.glide-testimoni .glide__arrow--right {
+    right: -25px;
+}
+
+.glide-testimoni .glide__bullets {
+    text-align: center;
+    margin-top: 32px;
+}
+
+.glide-testimoni .glide__bullet {
+    background-color: #D1D5DB;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    border: none;
+    margin: 0 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.glide-testimoni .glide__bullet.glide__bullet--active {
+    background-color: var(--neutral);
 }
 /* End Testimoni */
 
@@ -278,6 +343,10 @@
     width: 100%;
     height: 270px;
     border-radius: var(--border-radius);
+}
+
+#kontak .card {
+    border-radius: 15px;
 }
 
 /* End Kontak Section */
