--- a/resources/css/client/styles.css
+++ b/resources/css/client/styles.css
@@ -116,6 +116,8 @@ footer {
     background-color: var(--navy);
     filter: brightness(70%);
     padding: 16px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     font-size: 14px;
     font-family: var(--font-2);
     color: var(--neutral);
